  output mask file.  The common abbreviation `-' for `/dev/stdout' is
  understood.


** New Commandline Options

- To circumnavigate the lack of alpha-channel support of some common
  image formats, add option `--output-mask', to let the user define a
  mask filename for the output.


** Developer Stuff

- Configuration switches `--enable-image-cache' and its opposite were
  downgraded to nops.


** Package Maintainer Stuff

- Boost header <boost/optional.hpp> is not a mandatory header file
  anymore.  If the C++ standard library already supports C++17
  <optional> it will be preferred by configure(1).  A working
  standalone implementation of a C++11-compatiblle <optional> can be
  found at
          https://github.com/akrzemi1/Optional
  where only "optional.hpp" is needed.


* Version 4.2  "Compressor Road"

Released on March 29, 2016.

** Improvements

- All deprecated options and features of version 4.1 have been
  removed.

- Enblend and Enfuse support layer (aka "page", aka "frame") selection
  in of multi-layer image-files.  This includes processing any layers
  in user-defined order.

- Both Enblend and Enfuse can now perform all their pyramidal blending
  operations in CIELAB (aka L*a*b*, aka L-star) and CIELUV (aka
  L*u*v*) color spaces, too.  See section "New Commandline Options",
  option `--blend-colorspace'.

  The previous default, CIECAM for input images with ICC-profile has
  been changed to CIELUV.  The default for RGB images without
  ICC-profile remains.  However, the new default for floating-point
  image data is to use the RGB-cube, no matter whether the images come
  with profiles or not.

- The new Graph-Cut algorithm is the default primary seam-line
  generator.

- Avoid a division-by-zero in the Annealing Optimizer.

- Fix a bug (#1356551) in the seam-line vectorization code that was
  there since 2004.  The fix changes the position of almost any
  coarse-mask seam line vertex by one pixel.
