@@ -31,7 +31,8 @@ enblend_SOURCES = fillpolygon.hxx functoraccessor.hxx rect2d.hxx stride.hxx \
                   muopt.h optional_transitional.hpp
 enblend_LDFLAGS = $(AM_LDFLAGS)
 enblend_LDADD = layer_selection/liblayersel.a \
-                $(GSL_LIBS) @EXTRA_LIBS@
+                $(GSL_LIBS) $(STATIC_LIBS) \
+                @EXTRA_LIBS@
 enblend_CXXFLAGS = -DENBLEND_SOURCE $(AM_CXXFLAGS) $(GSL_CFLAGS) \
                    -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 \
                    -I$(top_srcdir)/src/dynamic_loader \
@@ -63,7 +64,8 @@ enfuse_SOURCES = functoraccessor.hxx rect2d.hxx stride.hxx \
 enfuse_LDFLAGS = $(AM_LDFLAGS)
 enfuse_LDADD = dynamic_loader/libdynamic_loader.a \
                layer_selection/liblayersel.a \
-               $(GSL_LIBS) @EXTRA_LIBS@
+               $(GSL_LIBS) $(STATIC_LIBS) \
+               @EXTRA_LIBS@
 enfuse_CXXFLAGS = -DENFUSE_SOURCE $(AM_CXXFLAGS) $(GSL_CFLAGS) \
                   -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 \
                   -I$(top_srcdir)/src/dynamic_loader \
